--- a/AndroidStudioProjects/MyApplication2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudioProjects/MyApplication2/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,9 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="30sp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
